--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,10 @@ Constructors.html
 Scope&&this.html
 .prototype.html
 ES5OOP.html
+ClassandConstructor.html
+InheritanceandSuper.html
+Callbacks.html
+delegating.html
+Asynchronicity.html
+Asynchronicity2.html
+Event handling.html
